--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 
 </style>
- <img src="images\yash.png" width="150px" height="150px"/>
+ <img src="yash.png" width="150px" height="150px"/>
 <h2><em>Yash Dhondu Gawade</em></h2>
 <hr />
 <h3><em>New in <a href="https://en.m.wikipedia.org/wiki/Web_development">Web Development</a></em></h3>
