--- a/index.html
+++ b/index.html
@@ -141,5 +141,5 @@
     
 
 </body>
-<img src="rehab.jpg" width="400px" height="400px"></img>
+<img src="r3hab.jpg" width="400px" height="400px"></img>
 </html>
