--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        <h1 class="top">I am <span>R3HAB</span></h1>
        <div class="container">
          <div class="box">
-       <img src="r3hab.jpg"></img>
+       <img src="R3HAB.jpg"></img>
        </div>
        </div>
         <h1 class="!important">About myself</h1>
@@ -141,5 +141,5 @@
     
 
 </body>
-<img src="r3hab.jpg" width="400px" height="400px"></img>
+<img src="rehab.jpg" width="400px" height="400px"></img>
 </html>
