--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="ol"> </div>
     <div style="height: 8px;"></div>
     <div id="title">
-    <span id="logo">MEMORY MATCHING GAME</span>
+    <span id="logo">MEMO5.IO</span>
     </div>
 
     <div id="title" style="height: 40px;">
